tests/NormalTests/paczka1/small_fuzzy/24816303.err
Error in line 1: hRiBoLNQQUp A681 83,9
Error in line 7: qpcqYfeu A681 86,2
Error in line 10: qpcqYfeu A153 84,6
